fixed alignment of main_content

--- a/starter_files/style.css
+++ b/starter_files/style.css
@@ -133,8 +133,13 @@ header{
 #main_content{
   display:flex;
   justify-content: space-around;
-  align-items: center;
+  align-content: center;
   flex-direction: row;
+}
+
+#main_content div{
+  width: 50%;
+  margin-left: 10%
 }
 
 }
